# moc-ng

./: .travis.yml  CMakeLists.txt  README  README.md  qobjectdefs-injected.h
cmake/modules/: FindClang.cmake  FindLLVM.cmake
src/: CMakeLists.txt  ExportedSymbolsList  clangversionabstraction.cpp  clangversionabstraction.h  embedded_includes.h.in  generator.cpp  generator.h  main.cpp  mocastconsumer.cpp  mocastconsumer.h  mocng.cpp  mocng.h  mocppcallbacks.cpp  mocppcallbacks.h  plugin.cpp  propertyparser.cpp  propertyparser.h  qbjs.cpp  qbjs.h  qobjectdefs-injected.h  workaroundtests.cpp
tests/: README  tests.pro
tests/autoreturn/: autoreturn.pro  tst_autoreturn.cpp
tests/nested/: nested.pro  tst_nested.cpp
tests/templates/: templates.pro  tst_templates.cpp
tests/templates2/: templatedobj.cpp  templatedobj.h  templates2.pro  tst_templates2.cpp
